--- a/backgrounds.html
+++ b/backgrounds.html
@@ -34,7 +34,7 @@
 		<div class="mdc-top-app-bar__row">
 			<div class="breadcrumbs mdc-theme--on-primary">
 				<div class="container breadcrumbs__list">
-					<div class="breadcrumbs__crumb"><a href="./5etools.html">Player Options</a></div>
+					<div class="breadcrumbs__crumb"><a href="./index.html">Player Options</a></div>
 					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Backgrounds</a></div>
 					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
 				</div>
