--- a/variantrules.html
+++ b/variantrules.html
@@ -25,7 +25,7 @@
 		<div class="mdc-top-app-bar__row">
 			<div class="breadcrumbs mdc-theme--on-primary">
 				<div class="container breadcrumbs__list">
-					<div class="breadcrumbs__crumb"><a href="./5etools.html">Rules</a></div>
+					<div class="breadcrumbs__crumb"><a href="./index.html">Rules</a></div>
 					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Variant Rules</a></div>
 					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
 				</div>
