More mobile styling and rules.

--- a/feats.html
+++ b/feats.html
@@ -190,8 +190,8 @@
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
 									<th class="sort" data-sort="source"><div class="table-cell" style="width: 116px;">Source</div></th>
-									<th class="sort" data-sort="ability"><div class="table-cell">Ability</div></th>
-									<th class="sort" data-sort="prerequisite"><div class="table-cell" style="width: 108px">Prerequisite</div></th>
+									<th class="sort" data-sort="ability"><div class="table-cell" style="width: 73px;">Ability</div></th>
+									<th class="sort hidden-mobile-down" data-sort="prerequisite"><div class="table-cell" style="width: 108px">Prerequisite</div></th>
 								</tr>
 							</thead>
 						</table>
