--- a/psionics.html
+++ b/psionics.html
@@ -181,9 +181,9 @@
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-									<th class="sort" data-sort="source"><div class="table-cell">Source</div></th>
+									<th class="sort hidden-mobile-down" data-sort="source"><div class="table-cell">Source</div></th>
 									<th class="sort" data-sort="type"><div class="table-cell">Type</div></th>
-									<th class="sort" data-sort="order"><div class="table-cell">Order</div></th>
+									<th class="sort hidden-mobile-down" data-sort="order"><div class="table-cell">Order</div></th>
 								</tr>
 							</thead>
 						</table>
