--- a/races.html
+++ b/races.html
@@ -191,8 +191,8 @@
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
 									<th class="sort" data-sort="ability"><div class="table-cell" style="width: 116px;">Ability</div></th>
-									<th class="sort" data-sort="size"><div class="table-cell">Size</div></th>
-									<th class="sort" data-sort="source"><div class="table-cell" style="width: 108px">Source</div></th>
+									<th class="sort hidden-mobile-down" data-sort="size"><div class="table-cell">Size</div></th>
+									<th class="sort hidden-mobile-down" data-sort="source"><div class="table-cell" style="width: 108px">Source</div></th>
 								</tr>
 							</thead>
 						</table>
