--- a/spells.html
+++ b/spells.html
@@ -185,11 +185,11 @@
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-									<th class="sort" data-sort="source"><div class="table-cell">Source</div></th>
-									<th class="sort" data-sort="level"><div class="table-cell">Level</div></th>
-									<th class="sort" data-sort="time"><div class="table-cell">Time</div></th>
-									<th class="sort" data-sort="school"><div class="table-cell">School</div></th>
-									<th class="sort" data-sort="range"><div class="table-cell">Range</div></th>
+									<th class="sort hidden-mobile-down " data-sort="source"><div class="table-cell">Source</div></th>
+									<th class="sort" data-sort="level"><div class="table-cell" style="width: 80px;">Level</div></th>
+									<th class="sort hidden-mobile-down " data-sort="time"><div class="table-cell">Time</div></th>
+									<th class="sort hidden-mobile-down " data-sort="school"><div class="table-cell">School</div></th>
+									<th class="sort hidden-mobile-down " data-sort="range"><div class="table-cell">Range</div></th>
 								</tr>
 							</thead>
 						</table>
