--- a/variantrules.html
+++ b/variantrules.html
@@ -178,7 +178,7 @@
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-									<th class="sort" data-sort="source"><div class="table-cell">Source</div></th>
+									<th class="sort" data-sort="source"><div class="table-cell" style="width: 72px">Source</div></th>
 								</tr>
 							</thead>
 						</table>
