Classes working a little, rules working.

--- a/feats.html
+++ b/feats.html
@@ -68,12 +68,14 @@
 					</div>
 				</a>
 
+				<hr class="mdc-list-divider">
 				<a class="mdc-list-item mdc-theme--on-surface" href="rules.html" tabindex="0">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">library_books</i>
 					<span class="mdc-list-item__text">Rules</span>
 				</a>
 				<a class="mdc-list-item mdc-theme--on-surface" href="variantrules.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">description</i>
+					
 					<span class="mdc-list-item__text">Variant Rules</span>
 				</a>
 
