--- a/backgrounds.html
+++ b/backgrounds.html
@@ -68,6 +68,7 @@
 					</div>
 				</a>
 
+				<hr class="mdc-list-divider">
 				<a class="mdc-list-item mdc-theme--on-surface" href="rules.html" tabindex="0">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">library_books</i>
 					<span class="mdc-list-item__text">Rules</span>
