--- a/classes.html
+++ b/classes.html
@@ -6,113 +6,178 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!--
-	XML data was compiled by a reddit community for use with the "Fight Club 5" app.
-	Google "5e xml files" for more info.
 
-	Feel free to use, edit, and redistribute this as you wish.
-	I don't own any of the XML data anyway.
--->
 
 	<title>Classes - 5e Tools</title>
 
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/material-components-web.min.css">
+	<link rel="stylesheet" href="css/my-styles.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" href="favicon.png">
 
-	<script type="text/javascript" src="lib/js-cookie.js"></script>
-	<style id="dynamicStyle"></style> <!-- populated with JS -->
-	<script type="text/javascript" src="js/styleswitch.js"></script>
-
-	<style>
-		table#stats > tbody > tr > td {
-			padding: 0 0.8em;
-		}
-		table#stats span.spell-ability {
-			display: block;
-			text-align: center;
-		}
-		table#stats span.spell-ability span {
-			font-weight: bold;
-		}
-	</style>
+	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+	<link rel="manifest" href="manifest.json">
+	<meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
-	<header class="hidden-xs hidden-sm">
-		<div class="container">
 
-			<h1>Class List</h1>
-			<p>Search by name on the left, click class name to display on the right.</p>
+	<header class="mdc-top-app-bar mdc-top-app-bar--fixed mdc-theme--primary-bg mdc-theme--on-primary">
+		<div class="mdc-top-app-bar__row">
+			<div class="breadcrumbs mdc-theme--on-primary">
+				<div class="container breadcrumbs__list">
+					<div class="breadcrumbs__crumb"><a href="./index.html">Player Options</a></div>
+					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Classes</a></div>
+					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
+				</div>
+			</div>
+			<div class="nav-button">
+				<button class="material-icons mdc-top-app-bar__navigation-icon mdc-theme--on-primary hidden-desktop-up margin-left_small">menu</button>
+				<div class="logo logo-white light-only margin-left_med hidden-tablet-down"></div>
+				<div class="logo dark-only margin-left_med hidden-tablet-down"></div>
+				<span class="mdc-top-app-bar__title mdc-theme--on-primary typography_mono hidden-tablet-down">5e Tools</span>
+			</div>
 		</div>
 	</header>
-	<nav class="container">
-		<ul class="nav nav-pills ">
-			<li role="presentation"><a href="index.html">5eTools</a></li>
-			<li role="presentation"><a href="rules.html">Rules</a></li>
-			<li role="presentation" class="dropdown active">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Player Options <span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li role="presentation" class="active"><a href="classes.html">Classes</a></li>
-					<li role="presentation"><a href="backgrounds.html">Backgrounds</a></li>
-					<li role="presentation"><a href="feats.html">Feats</a></li>
-					<li role="presentation"><a href="races.html">Races</a></li>
-				</ul>
-			</li>
-			<li role="presentation" class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">DM Tools <span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li role="presentation"><a href="crcalculator.html">CR Calculator</a></li>
-					<li role="presentation"><a href="http://kobold.club" target="_blank" title="I could literally 	never build something better than Kobold Fight Club">Encounter Builder</a></li>
-					<li role="presentation"><a href="encountergen.html">Encounter Generator</a></li>
-					<li role="presentation"><a href="lootgen.html">Loot Generator</a></li>
-				</ul>
-			</li>
-			<li role="presentation" class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">References <span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li role="presentation"><a href="bestiary.html">Bestiary</a></li>
-					<li role="presentation"><a href="conditions.html">Conditions</a></li>
-					<li role="presentation"><a href="cults.html">Cults</a></li>
-					<li role="presentation"><a href="items.html">Items</a></li>
-					<li role="presentation"><a href="rewards.html">Other Rewards</a></li>
-					<li role="presentation"><a href="psionics.html">Psionics</a></li>
-					<li role="presentation"><a href="spells.html">Spells</a></li>
-					<li role="presentation"><a href="variantrules.html">Variant Rules</a></li>
-				</ul>
-			</li>
-			<li role="presentation"><a href="statgen.html">Statgen</a></li>
-			<li role="presentation" class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Utilities<span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li role="presentation"><a href="converter.html">Stat Block to JSON</a></li>
-					<li role="presentation"><a href="editor.html">WYSIWYG Editor</a></li>
-				</ul>
-			</li>
-			<li role="presentation">
-				<a class="nightModeToggle" href="#" onclick="styleSwitcher.toggleActiveStyleSheet(); return false;"><script>document.write(styleSwitcher.getActiveStyleSheet() === StyleSwitcher.STYLE_DAY ? "Night Mode" : "Day Mode")</script></a>
-			</li>
-		</ul>
-	</nav>
-	<main class="container bodyContent classes">
 
-		<div class="row">
-			<div class="col-sm-3" id="listcontainer">
-				<div class="input-group" id="filter-search-input-group">
-					<input type="search" id="search" class="search form-control" placeholder="Find class...">
-					<span class="input-group-btn">
-						<button class="btn btn-default" type="button" id="reset">Reset</button>
-					</span>
-				</div>
-				<div id="filtertools" class="sortlabel btn-group">
-					<button class="col-xs-8 sort btn btn-default btn-xs" type="button" data-sort="name">Name</button>
-					<button class="col-xs-4 sort btn btn-default btn-xs" type="button" data-sort="source">Source</button>
+	<aside class="mdc-drawer mdc-drawer--modal mdc-drawer--open mdc-theme--surface">
+		<div class="mdc-drawer__content">
+			<nav class="mdc-list">
+				<div class="mdc-drawer__header hidden-desktop-up">
+					<h3 class="mdc-drawer__title mdc-theme--on-surface typography_mono"><div class="logo margin-right_small"></div>5e Tools</h3>
+					<h6 class="mdc-drawer__subtitle mdc-theme--text-secondary-on-background margin-top_small typography_mono">A D&amp;D Players Companion</h6>
 				</div>
 
-				<ul class="list classes">
+				<a class="mdc-list-item mdc-theme--on-surface" href="#">
+					<label class="darkmode-label" for="dark-mode-switch">Dark Mode</label>
+					<div class="mdc-switch mdc-list-item__meta">
+						<div class="mdc-switch__track"></div>
+						<div class="mdc-switch__thumb-underlay">
+							<div class="mdc-switch__thumb">
+								<input type="checkbox" id="dark-mode-switch" class="mdc-switch__native-control" role="switch">
+							</div>
+						</div>
+					</div>
+				</a>
 
-				</ul>
+				<hr class="mdc-list-divider">
+				<a class="mdc-list-item mdc-theme--on-surface" href="rules.html" tabindex="0">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">library_books</i>
+					<span class="mdc-list-item__text">Rules</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="variantrules.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">description</i>
+					
+					<span class="mdc-list-item__text">Variant Rules</span>
+				</a>
+
+				<hr class="mdc-list-divider">
+				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Player Options</h6>
+				
+				<div class='collapse open'>
+					<div class="collapse-toggle margin-top_small margin-bottom_none mdc-list-item mdc-theme--on-surface">
+						<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">class</i>
+						<span class="mdc-list-item__text">Classes</span>
+					</div>
+					<div class='collapse-wrapper'>
+						<ul class='collapse-list list classes'></ul>
+					</div>
+				</div>
+
+				<a class="mdc-list-item mdc-theme--on-surface" href="backgrounds.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">public</i>
+					<span class="mdc-list-item__text">Backgrounds</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="feats.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">fitness_center</i>
+					<span class="mdc-list-item__text">Feats</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="races.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">face</i>
+					<span class="mdc-list-item__text">Races</span>
+				</a>
+
+				<hr class="mdc-list-divider">
+				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">References</h6>
+				<a class="mdc-list-item mdc-theme--on-surface" href="spells.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">flash_on</i>
+					<span class="mdc-list-item__text">Spells</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="conditions.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">sentiment_very_dissatisfied</i>
+					<span class="mdc-list-item__text">Conditions</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="items.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">restaurant</i>
+					<span class="mdc-list-item__text">Items</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="rewards.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">toll</i>
+					<span class="mdc-list-item__text">Other Rewards</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="bestiary.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">warning</i>
+					<span class="mdc-list-item__text">Bestiary</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="psionics.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">record_voice_over</i>
+					<span class="mdc-list-item__text">Psionics</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="cults.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">group</i>
+					<span class="mdc-list-item__text">Cults</span>
+				</a>
+
+				<hr class="mdc-list-divider">
+				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Tools</h6>
+				<a class="mdc-list-item mdc-theme--on-surface" href="crcalculator.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">iso</i>
+					<span class="mdc-list-item__text">CR Calculator</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="encountergen.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">gavel</i>
+					<span class="mdc-list-item__text">Encounter Generator</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="lootgen.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">shopping_cart</i>
+					<span class="mdc-list-item__text">Loot Generator</span>
+				</a>
+				<a class="mdc-list-item mdc-theme--on-surface" href="statgen.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">casino</i>
+					<span class="mdc-list-item__text">Stat Generator</span>
+				</a>
+			</nav>
+		</div>
+	</aside>
+
+	<div class="mdc-drawer-scrim"></div>
+
+	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
+		<div class="container">
+			<h1 class="page-title mdc-typography--headline2 margin-bottom_med margin-top_large">Classes</h1>
+
+			<button class="mdc-icon-button close-item material-icons">close</button>
+
+			<div class="stats-wrapper  margin-bottom_large">
+				<div class="text"></div>
 			</div>
+
+			<!-- <div id="listcontainer">
+				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+					<div class="table--scroll">
+						<table class="table list cults">
+							<thead>
+								<tr class="table-row table-row--header">
+									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
+								</tr>
+							</thead>
+						</table>
+					</div>
+				</div>
+			</div> -->
+			
 			<div class="col-sm-9" id="classtable">
 				<table>
 					<tr>
@@ -234,94 +299,97 @@
 					</tr>
 				</table>
 			</div>
-		</div>
-		<hr>
-		<div class="row">
-			<div class="col-md-3">
-				<table id="statsprof" class="stats">
-					<tr>
-						<th class="border" colspan="6"></th>
-					</tr>
-					<tr>
-						<th id="nameSummary" colspan="6">Name</th>
-					</tr>
-					<tr>
-						<td class="divider" colspan="6">
-							<div></div>
-						</td>
-					</tr>
-					<tr>
-						<td id="hp" colspan="6">
-							<h5>Hit Points</h5>
-								<div id="hitdice">
-									<strong>Hit Dice:</strong>
+			<hr>
+			<div class="row">
+				<div class="col-md-3">
+					<table id="statsprof" class="stats">
+						<tr>
+							<th class="border" colspan="6"></th>
+						</tr>
+						<tr>
+							<th id="nameSummary" colspan="6">Name</th>
+						</tr>
+						<tr>
+							<td class="divider" colspan="6">
+								<div></div>
+							</td>
+						</tr>
+						<tr>
+							<td id="hp" colspan="6">
+								<h5>Hit Points</h5>
+									<div id="hitdice">
+										<strong>Hit Dice:</strong>
+										<span> </span>
+									</div>
+									<div id="hp1stlevel">
+										<strong>Hit Points at 1st Level:</strong>
+										<span> </span>
+									</div>
+									<div id="hphigherlevels">
+										<strong>Hit Points at Higher Levels:</strong>
+										<span> </span>
+									</div>
+								</td>
+							</tr>
+							<tr>
+								<td id="prof" colspan="6">
+									<h5>Proficiencies</h5>
+								<span>You are proficient with the following items, in addition to any proficiencies provided by your race or background.</span>
+								<div id="armor">
+									<strong>Armor:</strong>
 									<span> </span>
 								</div>
-								<div id="hp1stlevel">
-									<strong>Hit Points at 1st Level:</strong>
+								<div id="weapons">
+									<strong>Weapons:</strong>
 									<span> </span>
 								</div>
-								<div id="hphigherlevels">
-									<strong>Hit Points at Higher Levels:</strong>
+								<div id="tools">
+									<strong>Tools:</strong>
+									<span> </span>
+								</div>
+								<div id="saves">
+									<strong>Saving Throws:</strong>
+									<span> </span>
+								</div>
+								<div id="skills">
+									<strong>Skills:</strong>
 									<span> </span>
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<td id="prof" colspan="6">
-								<h5>Proficiencies</h5>
-							<span>You are proficient with the following items, in addition to any proficiencies provided by your race or background.</span>
-							<div id="armor">
-								<strong>Armor:</strong>
-								<span> </span>
-							</div>
-							<div id="weapons">
-								<strong>Weapons:</strong>
-								<span> </span>
-							</div>
-							<div id="tools">
-								<strong>Tools:</strong>
-								<span> </span>
-							</div>
-							<div id="saves">
-								<strong>Saving Throws:</strong>
-								<span> </span>
-							</div>
-							<div id="skills">
-								<strong>Skills:</strong>
-								<span> </span>
-							</div>
-						</td>
-					</tr>
-					<tr>
-						<td id="equipment" colspan="6">
-							<h5>Starting Equipment</h5>
-							<div></div>
-						</td>
-					</tr>
+							<td id="equipment" colspan="6">
+								<h5>Starting Equipment</h5>
+								<div></div>
+							</td>
+						</tr>
 
-					<tr>
-						<th class="border" colspan="6"></th>
-					</tr>
-				</table>
+						<tr>
+							<th class="border" colspan="6"></th>
+						</tr>
+					</table>
+				</div>
+				<div class="col-md-9">
+					<div id="subclasses"></div>
+					<table id="stats" class="stats">
+						<tr id="ftTopBorder"><th class="border" colspan="6"></th></tr>
+
+						<!-- populate with JS -->
+
+						<tr style="height: 10px;"></tr> <!-- high quality layout code-->
+						<tr><th class="border" colspan="6"></th></tr>
+					</table>
+
+				</div>
 			</div>
-			<div class="col-md-9">
-				<div id="subclasses"></div>
-				<table id="stats" class="stats">
-					<tr id="ftTopBorder"><th class="border" colspan="6"></th></tr>
 
-					<!-- populate with JS -->
 
-					<tr style="height: 10px;"></tr> <!-- high quality layout code-->
-					<tr><th class="border" colspan="6"></th></tr>
-				</table>
-
-			</div>
 		</div>
-	</main>
-	<footer class="container">
+	</div>
 
-	</footer>
+	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
+	<script type="text/javascript" src="js/nav.js"></script>
+
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/entryrender.js"></script>
 	<script type="text/javascript" src="js/history.js"></script>
@@ -329,8 +397,5 @@
 	<script type="text/javascript" src="lib/droll.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
-	<script type="text/javascript" src="lib/bootstrap.js"></script>
-
 </body>
-
 </html>
