--- a/cults.html
+++ b/cults.html
@@ -6,15 +6,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!--
-	XML data was compiled by a reddit community for use with the "Fight Club 5" app.
-	Google "5e xml files" for more info.
-
-	Feel free to use, edit, and redistribute this as you wish.
-	I don't own any of the XML data anyway.
--->
-
-
 	<title>Cults - 5e Tools</title>
 
 	<link rel="stylesheet" href="css/reset.css">
@@ -68,12 +59,14 @@
 					</div>
 				</a>
 
+				<hr class="mdc-list-divider">
 				<a class="mdc-list-item mdc-theme--on-surface" href="rules.html" tabindex="0">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">library_books</i>
 					<span class="mdc-list-item__text">Rules</span>
 				</a>
 				<a class="mdc-list-item mdc-theme--on-surface" href="variantrules.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">description</i>
+					
 					<span class="mdc-list-item__text">Variant Rules</span>
 				</a>
 
