--- a/items.html
+++ b/items.html
@@ -68,12 +68,14 @@
 					</div>
 				</a>
 
+				<hr class="mdc-list-divider">
 				<a class="mdc-list-item mdc-theme--on-surface" href="rules.html" tabindex="0">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">library_books</i>
 					<span class="mdc-list-item__text">Rules</span>
 				</a>
 				<a class="mdc-list-item mdc-theme--on-surface" href="variantrules.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">description</i>
+					
 					<span class="mdc-list-item__text">Variant Rules</span>
 				</a>
 
@@ -174,30 +176,32 @@
 				<div class="margin-bottom_small">Source: <span class="source"></span></div>
 			</div>
 
-			<div id="listcontainer">
-				<div id="filter-search-input-group" class="filter-group">
-					<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
-  						<i class="material-icons mdc-text-field__icon mdc-theme--primary">search</i>
-						<input type="search" id="search-field" class="mdc-text-field__input search" >
-						<div class="mdc-notched-outline">
-							<div class="mdc-notched-outline__leading"></div>
-							<div class="mdc-notched-outline__notch">
-								<label for="search-field" class="mdc-floating-label">Search</label>
-							</div>
-							<div class="mdc-notched-outline__trailing"></div>
+			<div id="filter-search-input-group" class="filter-group">
+				<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
+					<i class="material-icons mdc-text-field__icon mdc-theme--primary">search</i>
+					<input type="search" id="search-field" class="mdc-text-field__input search" >
+					<div class="mdc-notched-outline">
+						<div class="mdc-notched-outline__leading"></div>
+						<div class="mdc-notched-outline__notch">
+							<label for="search-field" class="mdc-floating-label">Search</label>
 						</div>
-					</div>
-					<div class="filter-group--buttons">
-						<button class="mdc-button mdc-button--raised" id="reset">
-							<span class="mdc-button__label">Reset</span>
-						</button>
+						<div class="mdc-notched-outline__trailing"></div>
 					</div>
 				</div>
+				<div class="filter-group--buttons">
+					<button class="mdc-button mdc-button--raised" id="reset">
+						<span class="mdc-button__label">Reset</span>
+					</button>
+				</div>
+			</div>
+		</div>
 
-				<div class='collapse open margin-top_med'>
-					<div class='collapse-toggle'>
-						Mundane Items
-					</div>
+		<div id="listcontainer">
+			<div class='collapse open margin-top_med'>
+				<div class='container collapse-toggle'>
+					Mundane Items
+				</div>
+				<div class='container collapse-wrapper'>
 					<div class='collapse-list'>
 						<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
 							<div class="table--scroll">
@@ -206,8 +210,8 @@
 										<tr class="table-row table-row--header">
 											<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
 											<th class="sort" data-sort="type"><div class="table-cell">Type</div></th>
-											<th class="sort" data-sort="source"><div class="table-cell">Source</div></th>
-											<th class="sort" data-sort="rarity"><div class="table-cell">Rarity</div></th>
+											<th class="sort hidden-mobile-down" data-sort="source"><div class="table-cell">Source</div></th>
+											<th class="sort hidden-mobile-down" data-sort="rarity"><div class="table-cell">Rarity</div></th>
 										</tr>
 									</thead>
 								</table>
@@ -215,11 +219,13 @@
 						</div>
 					</div>
 				</div>
-				
-				<div class='collapse open margin-bottom_large'>
-					<div class='collapse-toggle'>
-						Magical Items
-					</div>
+			</div>
+			
+			<div class='collapse open margin-bottom_large'>
+				<div class='container collapse-toggle'>
+					Magical Items
+				</div>
+				<div class='container collapse-wrapper'>
 					<div class='collapse-list'>
 						<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
 							<div class="table--scroll">
