Styling for classes and other such stuff, swipe.

--- a/index.html
+++ b/index.html
@@ -31,16 +31,13 @@
 		<div class="mdc-top-app-bar__row">
 			<div class="breadcrumbs mdc-theme--on-primary">
 				<div class="container breadcrumbs__list">
-					<div class="breadcrumbs__crumb">Color</div>
-					<div class="breadcrumbs__crumb">Dark theme</div>
-					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
 				</div>
 			</div>
 			<div class="nav-button">
 				<button class="material-icons mdc-top-app-bar__navigation-icon mdc-theme--on-primary hidden-desktop-up margin-left_small">menu</button>
-				<div class="logo logo-white light-only margin-left_med hidden-tablet-down"></div>
-				<div class="logo dark-only margin-left_med hidden-tablet-down"></div>
-				<span class="mdc-top-app-bar__title mdc-theme--on-primary typography_mono hidden-tablet-down">5e Tools</span>
+				<a href='index.html'><div class="logo logo-white light-only"></div></a>
+				<a href='index.html'><div class="logo dark-only"></div></a>
+				<a href='index.html'><span class="mdc-top-app-bar__title mdc-theme--on-primary typography_mono hidden-tablet-down">5e Tools</span></a>
 			</div>
 		</div>
 	</header>
@@ -49,8 +46,8 @@
 		<div class="mdc-drawer__content">
 			<nav class="mdc-list">
 				<div class="mdc-drawer__header hidden-desktop-up">
-					<h3 class="mdc-drawer__title mdc-theme--on-surface typography_mono"><div class="logo margin-right_small"></div>5e Tools</h3>
-					<h6 class="mdc-drawer__subtitle mdc-theme--text-secondary-on-background margin-top_small typography_mono">A D&amp;D Players Companion</h6>
+					<a href='index.html'><h3 class="mdc-drawer__title mdc-theme--on-surface typography_mono"><div class="logo margin-right_small"></div>5e Tools</h3>
+					<h6 class="mdc-drawer__subtitle mdc-theme--text-secondary-on-background margin-top_small typography_mono">A D&amp;D Players Companion</h6></a>
 				</div>
 
 				<a class="mdc-list-item mdc-theme--on-surface" href="#">
@@ -151,8 +148,8 @@
 	<div class="mdc-drawer-scrim"></div>
 	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
 		<div class="container">
-			<h1 class="mdc-typography--headline2 margin-bottom_large margin-top_large">Dark theme</h1>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			<h1 class="mdc-typography--headline2 margin-bottom_large margin-top_large typography_mono">5e Tools</h1>
+			
 		</div>
 	</div>
 
@@ -174,6 +171,8 @@
 	</script>
 	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
-	<script type="text/javascript" src="js/nav.js"></script>
+	<script type="text/javascript" src="lib/swipe.js"></script>
+ 
+    <script type="text/javascript" src="js/nav.js"></script>
 </body>
 </html>
