--- a/psionics.html
+++ b/psionics.html
@@ -33,9 +33,9 @@
 			</div>
 			<div class="nav-button">
 				<button class="material-icons mdc-top-app-bar__navigation-icon mdc-theme--on-primary hidden-desktop-up margin-left_small">menu</button>
-				<div class="logo logo-white light-only margin-left_med hidden-tablet-down"></div>
-				<div class="logo dark-only margin-left_med hidden-tablet-down"></div>
-				<span class="mdc-top-app-bar__title mdc-theme--on-primary typography_mono hidden-tablet-down">5e Tools</span>
+				<a href='index.html'><div class="logo logo-white light-only"></div></a>
+				<a href='index.html'><div class="logo dark-only"></div></a>
+				<a href='index.html'><span class="mdc-top-app-bar__title mdc-theme--on-primary typography_mono hidden-tablet-down">5e Tools</span></a>
 			</div>
 		</div>
 	</header>
@@ -44,8 +44,8 @@
 		<div class="mdc-drawer__content">
 			<nav class="mdc-list">
 				<div class="mdc-drawer__header hidden-desktop-up">
-					<h3 class="mdc-drawer__title mdc-theme--on-surface typography_mono"><div class="logo margin-right_small"></div>5e Tools</h3>
-					<h6 class="mdc-drawer__subtitle mdc-theme--text-secondary-on-background margin-top_small typography_mono">A D&amp;D Players Companion</h6>
+					<a href='index.html'><h3 class="mdc-drawer__title mdc-theme--on-surface typography_mono"><div class="logo margin-right_small"></div>5e Tools</h3>
+					<h6 class="mdc-drawer__subtitle mdc-theme--text-secondary-on-background margin-top_small typography_mono">A D&amp;D Players Companion</h6></a>
 				</div>
 
 				<a class="mdc-list-item mdc-theme--on-surface" href="#">
@@ -147,7 +147,7 @@
 
 	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
 		<div class="container">
-			<h1 class="page-title mdc-typography--headline2 margin-bottom_med margin-top_large">Psionics</h1>
+			<h1 class="page-title mdc-typography--headline2">Psionics</h1>
 
 			<button class="mdc-icon-button close-item material-icons">close</button>
 
@@ -196,7 +196,9 @@
 	</div>
 
 	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="js/nav.js"></script>
+	<script type="text/javascript" src="lib/swipe.js"></script>
+ 
+    <script type="text/javascript" src="js/nav.js"></script>
 
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/filter.js"></script>
