--- a/classes.html
+++ b/classes.html
@@ -35,9 +35,9 @@
 			</div>
 			<div class="nav-button">
 				<button class="material-icons mdc-top-app-bar__navigation-icon mdc-theme--on-primary hidden-desktop-up margin-left_small">menu</button>
-				<div class="logo logo-white light-only margin-left_med hidden-tablet-down"></div>
-				<div class="logo dark-only margin-left_med hidden-tablet-down"></div>
-				<span class="mdc-top-app-bar__title mdc-theme--on-primary typography_mono hidden-tablet-down">5e Tools</span>
+				<a href='index.html'><div class="logo logo-white light-only"></div></a>
+				<a href='index.html'><div class="logo dark-only"></div></a>
+				<a href='index.html'><span class="mdc-top-app-bar__title mdc-theme--on-primary typography_mono hidden-tablet-down">5e Tools</span></a>
 			</div>
 		</div>
 	</header>
@@ -46,8 +46,8 @@
 		<div class="mdc-drawer__content">
 			<nav class="mdc-list">
 				<div class="mdc-drawer__header hidden-desktop-up">
-					<h3 class="mdc-drawer__title mdc-theme--on-surface typography_mono"><div class="logo margin-right_small"></div>5e Tools</h3>
-					<h6 class="mdc-drawer__subtitle mdc-theme--text-secondary-on-background margin-top_small typography_mono">A D&amp;D Players Companion</h6>
+					<a href='index.html'><h3 class="mdc-drawer__title mdc-theme--on-surface typography_mono"><div class="logo margin-right_small"></div>5e Tools</h3>
+					<h6 class="mdc-drawer__subtitle mdc-theme--text-secondary-on-background margin-top_small typography_mono">A D&amp;D Players Companion</h6></a>
 				</div>
 
 				<a class="mdc-list-item mdc-theme--on-surface" href="#">
@@ -77,9 +77,11 @@
 				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Player Options</h6>
 				
 				<div class='collapse open'>
-					<div class="collapse-toggle margin-top_small margin-bottom_none mdc-list-item mdc-theme--on-surface">
-						<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">class</i>
-						<span class="mdc-list-item__text">Classes</span>
+					<div class="collapse-toggle margin-top_small margin-bottom_none">
+						<div class="mdc-list-item mdc-theme--on-surface">
+							<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">class</i>
+							<span class="mdc-list-item__text">Classes</span>
+						</div>
 					</div>
 					<div class='collapse-wrapper'>
 						<ul class='collapse-list list classes'></ul>
@@ -156,239 +158,186 @@
 
 	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
 		<div class="container">
-			<h1 class="page-title mdc-typography--headline2 margin-bottom_med margin-top_large">Classes</h1>
+			<h1 class="page-title mdc-typography--headline2">Classes</h1>
 
 			<button class="mdc-icon-button close-item material-icons">close</button>
 
-			<div class="stats-wrapper  margin-bottom_large">
-				<div class="text"></div>
+			<div class="class-list-container">
+				
 			</div>
+			
+			<div class='class-page--class-container'>
+				<div id="classtable">
+					<table class='table'>
+						<tr id="groupHeaders" class='table-row table-row--header'>
+							<th colspan="3"></th> <!-- spacer to match the 3 default cols (level, prof, features) -->
+						</tr>
+						<tr id="colHeaders" class='table-row table-row--header'>
+							<th class="level table-cell">Level</th>
+							<th class="pb table-cell">Proficiency Bonus</th>
+							<th class="features table-cell">Features</th>
+						</tr>
+						<tr id="level1" class='table-row'>
+							<td class="level table-cell">1st</td>
+							<td class="pb table-cell">+2</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level2" class='table-row'>
+							<td class="level table-cell">2nd</td>
+							<td class="pb table-cell">+2</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level3" class='table-row'>
+							<td class="level table-cell">3rd</td>
+							<td class="pb table-cell">+2</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level4" class='table-row'>
+							<td class="level table-cell">4th</td>
+							<td class="pb table-cell">+2</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level5" class='table-row'>
+							<td class="level table-cell">5th</td>
+							<td class="pb table-cell">+3</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level6" class='table-row'>
+							<td class="level table-cell">6th</td>
+							<td class="pb table-cell">+3</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level7" class='table-row'>
+							<td class="level table-cell">7th</td>
+							<td class="pb table-cell">+3</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level8" class='table-row'>
+							<td class="level table-cell">8th</td>
+							<td class="pb table-cell">+3</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level9" class='table-row'>
+							<td class="level table-cell">9th</td>
+							<td class="pb table-cell">+4</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level10" class='table-row'>
+							<td class="level table-cell">10th</td>
+							<td class="pb table-cell">+4</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level11" class='table-row'>
+							<td class="level table-cell">11th</td>
+							<td class="pb table-cell">+4</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level12" class='table-row'>
+							<td class="level table-cell">12th</td>
+							<td class="pb table-cell">+4</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level13" class='table-row'>
+							<td class="level table-cell">13th</td>
+							<td class="pb table-cell">+5</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level14" class='table-row'>
+							<td class="level table-cell">14th</td>
+							<td class="pb table-cell">+5</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level15" class='table-row'>
+							<td class="level table-cell">15th</td>
+							<td class="pb table-cell">+5</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level16" class='table-row'>
+							<td class="level table-cell">16th</td>
+							<td class="pb table-cell">+5</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level17" class='table-row'>
+							<td class="level table-cell">17th</td>
+							<td class="pb table-cell">+6</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level18" class='table-row'>
+							<td class="level table-cell">18th</td>
+							<td class="pb table-cell">+6</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level19" class='table-row'>
+							<td class="level table-cell">19th</td>
+							<td class="pb table-cell">+6</td>
+							<td class="features table-cell"></td>
+						</tr>
+						<tr id="level20" class='table-row'>
+							<td class="level table-cell">20th</td>
+							<td class="pb table-cell">+6</td>
+							<td class="features table-cell"></td>
+						</tr>
+					</table>
+				</div>
 
-			<!-- <div id="listcontainer">
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
-					<div class="table--scroll">
-						<table class="table list cults">
-							<thead>
-								<tr class="table-row table-row--header">
-									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-								</tr>
-							</thead>
-						</table>
+				<div id="statsprof" class="stats">
+					<div id="hp" colspan="6">
+						<h5 class="mdc-typography--headline6">Hit Points</h5>
+						<div id="hitdice">
+							<strong>Hit Dice:</strong>
+							<span> </span>
+						</div>
+						<div id="hp1stlevel">
+							<strong>Hit Points at 1st Level:</strong>
+							<span> </span>
+						</div>
+						<div id="hphigherlevels">
+							<strong>Hit Points at Higher Levels:</strong>
+							<span> </span>
+						</div>
+					</div>
+					<div id="prof" colspan="6">
+						<h5 class="mdc-typography--headline6">Proficiencies</h5>
+						<span>You are proficient with the following items, in addition to any proficiencies provided by your race or background.</span>
+						<div id="armor">
+							<strong>Armor:</strong>
+							<span> </span>
+						</div>
+						<div id="weapons">
+							<strong>Weapons:</strong>
+							<span> </span>
+						</div>
+						<div id="tools">
+							<strong>Tools:</strong>
+							<span> </span>
+						</div>
+						<div id="saves">
+							<strong>Saving Throws:</strong>
+							<span> </span>
+						</div>
+						<div id="skills">
+							<strong>Skills:</strong>
+							<span> </span>
+						</div>
+						<div id="equipment" colspan="6">
+							<h5 class="mdc-typography--headline6">Starting Equipment</h5>
+							<div></div>
+						</div>
 					</div>
 				</div>
-			</div> -->
-			
-			<div class="col-sm-9" id="classtable">
-				<table>
-					<tr>
-						<th class="border" colspan="15"></th>
-					</tr>
-					<tr>
-						<th id="nameTable" colspan="15">Name</th>
-					</tr>
-					<tr id="groupHeaders">
-						<th colspan="3"></th> <!-- spacer to match the 3 default cols (level, prof, features) -->
-					</tr>
-					<tr id="colHeaders">
-						<th class="level">Level</th>
-						<th class="pb">Proficiency Bonus</th>
-						<th class="features">Features</th>
-					</tr>
-					<tr id="level1">
-						<td class="level">1st</td>
-						<td class="pb">+2</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level2">
-						<td class="level">2nd</td>
-						<td class="pb">+2</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level3">
-						<td class="level">3rd</td>
-						<td class="pb">+2</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level4">
-						<td class="level">4th</td>
-						<td class="pb">+2</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level5">
-						<td class="level">5th</td>
-						<td class="pb">+3</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level6">
-						<td class="level">6th</td>
-						<td class="pb">+3</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level7">
-						<td class="level">7th</td>
-						<td class="pb">+3</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level8">
-						<td class="level">8th</td>
-						<td class="pb">+3</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level9">
-						<td class="level">9th</td>
-						<td class="pb">+4</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level10">
-						<td class="level">10th</td>
-						<td class="pb">+4</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level11">
-						<td class="level">11th</td>
-						<td class="pb">+4</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level12">
-						<td class="level">12th</td>
-						<td class="pb">+4</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level13">
-						<td class="level">13th</td>
-						<td class="pb">+5</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level14">
-						<td class="level">14th</td>
-						<td class="pb">+5</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level15">
-						<td class="level">15th</td>
-						<td class="pb">+5</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level16">
-						<td class="level">16th</td>
-						<td class="pb">+5</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level17">
-						<td class="level">17th</td>
-						<td class="pb">+6</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level18">
-						<td class="level">18th</td>
-						<td class="pb">+6</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level19">
-						<td class="level">19th</td>
-						<td class="pb">+6</td>
-						<td class="features"></td>
-					</tr>
-					<tr id="level20">
-						<td class="level">20th</td>
-						<td class="pb">+6</td>
-						<td class="features"></td>
-					</tr>
-					<tr>
-						<th class="border" colspan="15"></th>
-					</tr>
+
+				<div id="subclasses"></div>
+				<table id="stats" class="stats">
+					<!-- populate with JS -->
 				</table>
 			</div>
-			<hr>
-			<div class="row">
-				<div class="col-md-3">
-					<table id="statsprof" class="stats">
-						<tr>
-							<th class="border" colspan="6"></th>
-						</tr>
-						<tr>
-							<th id="nameSummary" colspan="6">Name</th>
-						</tr>
-						<tr>
-							<td class="divider" colspan="6">
-								<div></div>
-							</td>
-						</tr>
-						<tr>
-							<td id="hp" colspan="6">
-								<h5>Hit Points</h5>
-									<div id="hitdice">
-										<strong>Hit Dice:</strong>
-										<span> </span>
-									</div>
-									<div id="hp1stlevel">
-										<strong>Hit Points at 1st Level:</strong>
-										<span> </span>
-									</div>
-									<div id="hphigherlevels">
-										<strong>Hit Points at Higher Levels:</strong>
-										<span> </span>
-									</div>
-								</td>
-							</tr>
-							<tr>
-								<td id="prof" colspan="6">
-									<h5>Proficiencies</h5>
-								<span>You are proficient with the following items, in addition to any proficiencies provided by your race or background.</span>
-								<div id="armor">
-									<strong>Armor:</strong>
-									<span> </span>
-								</div>
-								<div id="weapons">
-									<strong>Weapons:</strong>
-									<span> </span>
-								</div>
-								<div id="tools">
-									<strong>Tools:</strong>
-									<span> </span>
-								</div>
-								<div id="saves">
-									<strong>Saving Throws:</strong>
-									<span> </span>
-								</div>
-								<div id="skills">
-									<strong>Skills:</strong>
-									<span> </span>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td id="equipment" colspan="6">
-								<h5>Starting Equipment</h5>
-								<div></div>
-							</td>
-						</tr>
-
-						<tr>
-							<th class="border" colspan="6"></th>
-						</tr>
-					</table>
-				</div>
-				<div class="col-md-9">
-					<div id="subclasses"></div>
-					<table id="stats" class="stats">
-						<tr id="ftTopBorder"><th class="border" colspan="6"></th></tr>
-
-						<!-- populate with JS -->
-
-						<tr style="height: 10px;"></tr> <!-- high quality layout code-->
-						<tr><th class="border" colspan="6"></th></tr>
-					</table>
-
-				</div>
-			</div>
-
-
 		</div>
 	</div>
 
 	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="js/nav.js"></script>
+	<script type="text/javascript" src="lib/swipe.js"></script>
+ 
+    <script type="text/javascript" src="js/nav.js"></script>
 
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/entryrender.js"></script>
