--- a/variantrules.html
+++ b/variantrules.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/material-components-web.min.css">
-	<link rel="stylesheet" href="css/my-styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
 	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
@@ -122,22 +122,7 @@
 
 				<hr class="mdc-list-divider">
 				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Tools</h6>
-				<a class="mdc-list-item mdc-theme--on-surface" href="crcalculator.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">iso</i>
-					<span class="mdc-list-item__text">CR Calculator</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="encountergen.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">gavel</i>
-					<span class="mdc-list-item__text">Encounter Generator</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="lootgen.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">shopping_cart</i>
-					<span class="mdc-list-item__text">Loot Generator</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="statgen.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">casino</i>
-					<span class="mdc-list-item__text">Stat Generator</span>
-				</a>
+				
 			</nav>
 		</div>
 	</aside>
