--- a/spells.html
+++ b/spells.html
@@ -99,7 +99,7 @@
 
 				<hr class="mdc-list-divider">
 				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">References</h6>
-				<a class="mdc-list-item mdc-theme--on-surface" href="spells.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="spells.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">flash_on</i>
 					<span class="mdc-list-item__text">Spells</span>
 				</a>
@@ -166,7 +166,7 @@
 					</div>
 				</div>
 
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
 						<table class="table list spells">
 							<thead>
