--- a/variantrules.html
+++ b/variantrules.html
@@ -64,7 +64,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">library_books</i>
 					<span class="mdc-list-item__text">Rules</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="variantrules.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="variantrules.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">description</i>
 					
 					<span class="mdc-list-item__text">Variant Rules</span>
@@ -159,7 +159,7 @@
 					</div>
 				</div>
 
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
 						<table class="table list variantRules">
 							<thead>
