--- a/backgrounds.html
+++ b/backgrounds.html
@@ -84,7 +84,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">class</i>
 					<span class="mdc-list-item__text">Classes</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="backgrounds.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="backgrounds.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">public</i>
 					<span class="mdc-list-item__text">Backgrounds</span>
 				</a>
@@ -174,13 +174,14 @@
 					</div>
 				</div>
 
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
 						<table class="table list backgrounds">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-									<th class="sort" data-sort="source"><div class="table-cell" style="width: 108px;padding-left: 0;">Source</div></th>
+									<th class="sort hidden-mobile-down" data-sort="source"><div class="table-cell" style="width: 108px;padding-left: 0;">Source</div></th>
+									<th class="sort" data-sort="proficiencies"><div class="table-cell">Proficiencies</div></th>
 								</tr>
 							</thead>
 						</table>
