--- a/conditions.html
+++ b/conditions.html
@@ -103,7 +103,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">flash_on</i>
 					<span class="mdc-list-item__text">Spells</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="conditions.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="conditions.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">sentiment_very_dissatisfied</i>
 					<span class="mdc-list-item__text">Conditions</span>
 				</a>
@@ -167,7 +167,7 @@
 					</div>
 				</div>
 
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
 						<table class="table list conditions">
 							<thead>
