--- a/cults.html
+++ b/cults.html
@@ -115,7 +115,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">record_voice_over</i>
 					<span class="mdc-list-item__text">Psionics</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="cults.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="cults.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">group</i>
 					<span class="mdc-list-item__text">Cults</span>
 				</a>
@@ -159,7 +159,7 @@
 					</div>
 				</div>
 
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
 						<table class="table list cults">
 							<thead>
