--- a/feats.html
+++ b/feats.html
@@ -89,7 +89,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">public</i>
 					<span class="mdc-list-item__text">Backgrounds</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="feats.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="feats.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">fitness_center</i>
 					<span class="mdc-list-item__text">Feats</span>
 				</a>
@@ -170,7 +170,7 @@
 					</div>
 				</div>
 
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
 						<table class="table  list feats">
 							<thead>
