--- a/items.html
+++ b/items.html
@@ -108,7 +108,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">sentiment_very_dissatisfied</i>
 					<span class="mdc-list-item__text">Conditions</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="items.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="items.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">restaurant</i>
 					<span class="mdc-list-item__text">Items</span>
 				</a>
@@ -188,7 +188,7 @@
 				</div>
 				<div class='container collapse-wrapper'>
 					<div class='collapse-list'>
-						<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+						<div class="table-wrap mdc-elevation--z6">
 							<div class="table--scroll">
 								<table class="table list mundane">
 									<thead>
@@ -212,7 +212,7 @@
 				</div>
 				<div class='container collapse-wrapper'>
 					<div class='collapse-list'>
-						<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+						<div class="table-wrap mdc-elevation--z6">
 							<div class="table--scroll">
 								<table class="table list magic">
 									<thead>
