--- a/psionics.html
+++ b/psionics.html
@@ -112,7 +112,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">warning</i>
 					<span class="mdc-list-item__text">Bestiary</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="psionics.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="psionics.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">record_voice_over</i>
 					<span class="mdc-list-item__text">Psionics</span>
 				</a>
@@ -162,7 +162,7 @@
 					</div>
 				</div>
 
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
 						<table class="table list psionics">
 							<thead>
