--- a/races.html
+++ b/races.html
@@ -92,7 +92,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">fitness_center</i>
 					<span class="mdc-list-item__text">Feats</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="races.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="races.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">face</i>
 					<span class="mdc-list-item__text">Races</span>
 				</a>
@@ -171,7 +171,7 @@
 					</div>
 				</div>
 
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
 						<table class="table list races">
 							<thead>
