--- a/rewards.html
+++ b/rewards.html
@@ -111,7 +111,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">restaurant</i>
 					<span class="mdc-list-item__text">Items</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="rewards.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="rewards.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">toll</i>
 					<span class="mdc-list-item__text">Other Rewards</span>
 				</a>
@@ -168,7 +168,7 @@
 					</div>
 				</div>
 
-				<div class="table-wrap mdc-elevation--z6 margin-bottom_large">
+				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
 						<table class="table list rewards">
 							<thead>
