--- a/backgrounds.html
+++ b/backgrounds.html
@@ -25,7 +25,8 @@
 	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
 	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 	<link rel="manifest" href="manifest.json">
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" content="#03dac6">
+	<script type='text/javascript' src='js/darkmode.js'></script>
 </head>
 
 <body>
@@ -130,6 +131,7 @@
 
 				<hr class="mdc-list-divider">
 				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Tools</h6>
+				<span class='version mdc-typography--caption'>v1.0.0</span>
 				
 			</nav>
 		</div>
