--- a/rules.html
+++ b/rules.html
@@ -23,7 +23,8 @@
 	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
 	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 	<link rel="manifest" href="manifest.json">
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" content="#03dac6">
+	<script type='text/javascript' src='js/darkmode.js'></script>
 </head>
 
 <body>
@@ -46,7 +47,7 @@
 		</div>
 	</header>
 
-	<aside class="mdc-drawer mdc-drawer--modal mdc-drawer--open mdc-theme--surface">
+	<aside class="mdc-drawer mdc-drawer--modal mdc-theme--surface">
 		<div class="mdc-drawer__content">
 			<nav class="mdc-list">
 				<div class="mdc-drawer__header hidden-desktop-up">
@@ -204,6 +205,7 @@
 
 				<hr class="mdc-list-divider">
 				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Tools</h6>
+				<span class='version mdc-typography--caption'>v1.0.0</span>
 				
 			</nav>
 		</div>
