Adding home page links, fixing filters.

--- a/spells.html
+++ b/spells.html
@@ -131,7 +131,11 @@
 
 				<hr class="mdc-list-divider">
 				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Tools</h6>
-				<span class='version mdc-typography--caption'>v1.0.0</span>
+				<a class="mdc-list-item mdc-theme--on-surface" href="dice.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">casino</i>
+					<span class="mdc-list-item__text">Dice Roller</span>
+				</a>
+				<span class='version mdc-typography--caption'>v1.0.1</span>
 				
 			</nav>
 		</div>
@@ -174,7 +178,7 @@
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-									<th class="sort hidden-mobile-down " data-sort="source"><div class="table-cell">Source</div></th>
+									<th class="sort" data-sort="source"><div class="table-cell">Source</div></th>
 									<th class="sort" data-sort="level"><div class="table-cell" style="width: 80px;">Level</div></th>
 									<th class="sort hidden-mobile-down " data-sort="time"><div class="table-cell">Time</div></th>
 									<th class="sort hidden-mobile-down " data-sort="school"><div class="table-cell">School</div></th>
