--- a/psionics.html
+++ b/psionics.html
@@ -124,7 +124,11 @@
 
 				<hr class="mdc-list-divider">
 				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Tools</h6>
-				<span class='version mdc-typography--caption'>v1.0.0</span>
+				<a class="mdc-list-item mdc-theme--on-surface" href="dice.html">
+					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">casino</i>
+					<span class="mdc-list-item__text">Dice Roller</span>
+				</a>
+				<span class='version mdc-typography--caption'>v1.0.1</span>
 				
 			</nav>
 		</div>
