Adding roller tool, better icons, and fixes for filters / search.

--- a/backgrounds.html
+++ b/backgrounds.html
@@ -182,7 +182,7 @@
 
 				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
-						<table class="table list backgrounds">
+						<table class="table">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
@@ -190,6 +190,7 @@
 									<th class="sort" data-sort="proficiencies"><div class="table-cell">Proficiencies</div></th>
 								</tr>
 							</thead>
+							<tbody class="list backgrounds"></tbody>
 						</table>
 					</div>
 				</div>
