--- a/bestiary.html
+++ b/bestiary.html
@@ -263,7 +263,7 @@
 
 				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
-						<table class="table list monsters">
+						<table class="table">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
@@ -272,6 +272,7 @@
 									<th class="sort" data-sort="cr"><div class="table-cell" style="width: 50px;">CR</div></th>
 								</tr>
 							</thead>
+							<tbody class="list monsters"></tbody>
 						</table>
 					</div>
 				</div>
