--- a/races.html
+++ b/races.html
@@ -179,7 +179,7 @@
 
 				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
-						<table class="table list races">
+						<table class="table">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
@@ -188,6 +188,7 @@
 									<th class="sort hidden-mobile-down" data-sort="source"><div class="table-cell" style="width: 108px">Source</div></th>
 								</tr>
 							</thead>
+							<tbody class='list races'></tbody>
 						</table>
 					</div>
 				</div>
