--- a/conditions.html
+++ b/conditions.html
@@ -175,12 +175,13 @@
 
 				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
-						<table class="table list conditions">
+						<table class="table">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
 								</tr>
 							</thead>
+							<tbody class='list conditions'></tbody>
 						</table>
 					</div>
 				</div>
