--- a/cults.html
+++ b/cults.html
@@ -167,12 +167,13 @@
 
 				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
-						<table class="table list cults">
+						<table class="table">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
 								</tr>
 							</thead>
+							<tbody class="list cults"></tbody>
 						</table>
 					</div>
 				</div>
