--- a/feats.html
+++ b/feats.html
@@ -178,7 +178,7 @@
 
 				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
-						<table class="table  list feats">
+						<table class="table">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
@@ -187,6 +187,7 @@
 									<th class="sort hidden-mobile-down" data-sort="prerequisite"><div class="table-cell" style="width: 108px">Prerequisite</div></th>
 								</tr>
 							</thead>
+							<tbody class='list feats'></tbody>
 						</table>
 					</div>
 				</div>
