--- a/psionics.html
+++ b/psionics.html
@@ -170,7 +170,7 @@
 
 				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
-						<table class="table list psionics">
+						<table class="table">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
@@ -179,6 +179,7 @@
 									<th class="sort hidden-mobile-down" data-sort="order"><div class="table-cell">Order</div></th>
 								</tr>
 							</thead>
+							<tbody class='list psionics'></tbody>
 						</table>
 					</div>
 				</div>
