--- a/rewards.html
+++ b/rewards.html
@@ -176,13 +176,14 @@
 
 				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
-						<table class="table list rewards">
+						<table class="table">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
 									<th class="sort" data-sort="source"><div class="table-cell" style="width: 73px;">Source</div></th>
 								</tr>
 							</thead>
+							<tbody class="list rewards"></tbody>
 						</table>
 					</div>
 				</div>
