--- a/variantrules.html
+++ b/variantrules.html
@@ -167,13 +167,14 @@
 
 				<div class="table-wrap mdc-elevation--z6">
 					<div class="table--scroll">
-						<table class="table list variantRules">
+						<table class="table">
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
 									<th class="sort" data-sort="source"><div class="table-cell" style="width: 72px">Source</div></th>
 								</tr>
 							</thead>
+							<tbody class='list variantRules'></tbody> 
 						</table>
 					</div>
 				</div>
